badge tooltips are now positioned correctly, and badge spacing is fixed (see #15)

--- a/src/Hvz/GameBundle/Resources/public/css/main.css
+++ b/src/Hvz/GameBundle/Resources/public/css/main.css
@@ -104,3 +104,10 @@ core-toolbar {
 	color: #eceff1;
 	fill: #eceff1;
 }
+
+.badge {
+	width: 32px;
+	height: 32px;
+	margin-left: 2px;
+	margin-right: 2px;
+}
